2005-11-26  Tor Lillqvist  <tml@novell.com>

	* e-dialog-utils.c: Conditionalize X11 stuff on GDK_WINDOWING_X11.

2005-11-25  Tor Lillqvist  <tml@novell.com>

	* e-util-private.h: Sort the stuff in the Win32 part for
	clarity. Add some new run-time overrides for compile-time
	paths. Include fcntl.h and define O_BINARY as zero if not defined
	(on Unix).

	* e-win32-reloc.c: Sort here, too, and add the implementation for
	the new run-time overrides.

	* Makefile.am: Ditto here. Link with INTLLIBS.

2005-11-09  P. S. Chakravarthi <pchakravarthi@novell.com>

	Fixes #314638
	* e-categories-config.c (e_categories_config_get_icon_for):
	added a g_object_unref to unref the GdkPixBuff object
	created in this function.

2005-10-18  Srinivasa Ragavan <sragavan@novell.com>

	* e-dialog-utils.c: (save_ok), (e_file_dialog_save),
	(save_folder_ok), (folderchooser_response),
	(e_file_dialog_save_folder): Shows the default file name in the
	save file dialog. Added code to choose folder to save multiple
	attachments
	* e-dialog-utils.h: Added an additional parameter to e_file_dialog_save.

2005-10-04  Devashish Sharma  <sdevashish@novell.com>

	* e-util.c (g_str_case_compare): added a function for case insensitive
	and locale sensitive UTF8 string compare. See #207110.

2005-09-28  Tor Lillqvist  <tml@novell.com>

	* e-html-utils.c (e_text_to_html_full): Use g_ascii_strncasecmp()
	instead of strncasecmp(). We are comparing to literal ASCII
	strings, just casefolding ASCII is enough. Also better for
	portability.

	* e-profile-event.c (e_profile_event_target_new): Use
	g_get_current_time() instead of gettimeofday() for portability.

2005-08-23  Not Zed  <NotZed@Ximian.com>

	* e-util.c (e_mkdir_hier): cast warning, good ol win32 patches.
	(e_strftime): fix some clahey-code to use the right variable and
	not try to modify const strings by stealth.

	* eggtrayicon.h: add missing prototype.

	* e-gui-utils.c (e_create_image_widget): remove unused pixbuf.
